# drpd

./: .gitignore  .gitmodules  LICENSE  README.md
firmware/lib/proto/pd_messages/pdo/: CMakeLists.txt  pdo.cpp  pdo.hpp  pdo_augmented.cpp  (+7 more)
python/: .flake8  AGENTS.md  DEVELOPMENT.md  MANIFEST.in  PYPI_UPLOAD_GUIDE.md  README.md  TODO.md  pyproject.toml  pyrightconfig.json  pytest.ini  run_tests.sh  setup.py
python/info/plans/: avs-voltage-request-execplan.md  device-connect-disconnect-panel-execplan.md  usb_pd_32_message_compliance_execplan.md
python/info/usb/: usb_pd_32_audit_log.md  usb_pd_32_message_matrix.md
python/t76/: __init__.py  __main__.py
python/t76/drpd/: __main__.py  device_reconciliation.py
python/t76/drpd/app/: __init__.py  app.py  app.tcss  config.py  divider.py  logging.py
python/t76/drpd/device/: __init__.py  device.py  device_analog_monitor.py  device_capture.py  device_events.py  device_internal.py  device_mode.py  device_sink.py  device_system.py  device_trigger.py  device_vbus.py  discovery.py  events.py  types.py
python/t76/drpd/message/: __init__.py  bmc_sequence.py  codes.py  header.py  sop.py
python/t76/drpd/tests/: test_alert.py  test_app_device_reconciliation.py  test_data_object_compliance.py  test_device_analog_monitor.py  test_device_disconnect.py  test_device_internal.py  test_device_live_smoke.py  test_device_mode.py  test_device_selection_screen.py  test_device_sink.py  test_device_sink_pdos.py  test_device_trigger.py  test_device_vbus.py  test_events.py  test_extended_chunking.py  test_message_class_compliance.py  test_message_type_matrix.py  test_panel_fault_tolerance.py  test_renderable_fields.py  test_sink_avs_setup_modal.py  test_sink_panel_pdo_selection.py  test_sink_pps_setup_modal.py  test_sop.py  test_usb_pd_spec_decoding.py
python/t76/transport/: __init__.py  serial.py  transport.py  usb_discovery.py  visa.py
(+501 files in other folders)
